# omni-gen

./: README.md
backend/: .env.example  drop_ds_table.py  drop_tables.py  pyproject.toml  seed_jdbc_templates.py  seed_spring_data_jdbc_templates.py  seed_springboot_templates.py  setup_test_db.py  sync_ollama.py  test.db
backend/app/: main.py  models.py
backend/app/services/: db_service.py  generator_service.py  llm_service.py
frontend/: index.html  package-lock.json  package.json
frontend/src/router/: index.js
frontend/src/stores/: app.js
frontend/src/views/: DataSourcesView.vue  HomeView.vue  LLMConfigView.vue  MainLayout.vue  SettingsLayout.vue  SettingsRootLayout.vue  SettingsView.vue  TemplatesView.vue
