[project]
name = "omini-gen"
version = "0.1.0"
description = "OmniGen - A Full-Stack AI Code Generator for multiple data sources"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "fastapi>=0.127.0",
    "jinja2>=3.1.6",
    "openai>=2.14.0",
    "psycopg2-binary>=2.9.11",
    "pydantic-settings>=2.11.0",
    "pymysql>=1.1.2",
    "python-dotenv>=1.2.1",
    "python-multipart>=0.0.20",
    "requests>=2.32.5",
    "sqlalchemy>=2.0.45",
    "uvicorn>=0.39.0",
]
